[package]
name = "gcodeplot"
version = "0.1.0"
authors = ["ludwig-austermann <ludwig.austermann@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.16.0"
clap = "3.0.0-beta.2"
pest = "2.1.3"
pest_derive = "2.1"